Inclusão da classe NotaSomatorio

--- a/sistemaGestaoDiscente/src/main/java/com/mycompany/telas/cadastrarTurma.form
+++ b/sistemaGestaoDiscente/src/main/java/com/mycompany/telas/cadastrarTurma.form
@@ -171,6 +171,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Somat&#xf3;rio"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbSActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JRadioButton" name="rbMD">
           <Properties>
